# lumik

./: .gitignore  CHANGELOG.md  CLAUDE.md  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: release.yml
apps/desktop/: CLAUDE.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: apple_tags.rs  commands.rs  device_watch.rs  devices.rs  exif_android.rs  exiftool.rs  lib.rs  main.rs  util.rs
apps/desktop/src-tauri/src/db/: global_schema.sql  mod.rs  models.rs  project_schema.sql  queries.rs  schema.rs
apps/desktop/src-tauri/src/import/: converter.rs  hasher.rs  mod.rs  pipeline.rs  progress.rs  xmp.rs
apps/desktop/src/components/: CreateProjectModal.tsx  Layout.tsx  Sidebar.tsx  index.ts
apps/desktop/src/i18n/: config.ts
apps/desktop/src/i18n/locales/: en.json  es.json
apps/desktop/src/lib/: api.ts  hooks.ts  types.ts
apps/desktop/src/pages/: AboutPage.tsx  ImportPage.tsx  SettingsPage.tsx  index.ts
apps/desktop/src/pages/Project/: index.ts
apps/desktop/src/pages/Project/PhotoDetail/: PhotoDetail.tsx  PhotoSidebar.tsx  PhotoViewer.tsx  PhotoViewerToolbar.tsx  index.ts
apps/desktop/src/pages/Project/ProjectDetail/: FilterPopovers.tsx  ProjectDetail.tsx  ProjectDetailFooter.tsx  ProjectDetailHeader.tsx  index.ts
apps/desktop/src/pages/Project/Projects/: DeleteProjectModal.tsx  Projects.tsx  (+1 more)
apps/desktop/src/styles/: flatpickr.css  global.css
apps/desktop/src/workers/: histogram.worker.ts
apps/landing/: astro.config.mjs  package.json
apps/landing/.astro/: settings.json
apps/landing/src/components/: DownloadsPage.astro  LandingPage.astro
apps/landing/src/i18n/: ui.ts
apps/landing/src/pages/: downloads.astro  index.astro
apps/landing/src/pages/es/: downloads.astro  index.astro
apps/landing/src/styles/: base.css
apps/uikit/: package.json  tsconfig.json
apps/uikit/.storybook/: main.ts  preview.ts
apps/uikit/src/: styles.css
apps/uikit/src/stories/: Button.stories.tsx  DriveInfo.stories.tsx  DriveSelector.stories.tsx  DropZone.stories.tsx  FileList.stories.tsx  Icon.stories.tsx  Logo.stories.tsx  PhotoCard.stories.tsx  ProjectCard.stories.tsx  SearchBar.stories.tsx  SectionButton.stories.tsx  Select.stories.tsx  Stepper.stories.tsx  Tabs.stories.tsx
docs/: MVP.txt  ROADMAP.md  android-tablet-plan.md  import-pipeline.md
docs/useCases/: flujo-crear-proyecto.drawio  flujo-culling.drawio  flujo-importar-imagenes.drawio  flujo-rating-estrellas.drawio  flujo-rotacion.drawio
