[package]
name = "lumik"
version = "0.1.0"
description = "App de escritorio para administrar fotografías profesionales"
authors = ["Lumik"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base de datos SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilidades
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dirs = "5"

# Logging
log = "0.4"
env_logger = "0.11"

# RAW image processing and DNG conversion
rawler = "0.6"
image = "0.25"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Base64 encoding (thumbnails)
base64 = "0.22"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
