[package]
name = "lumik"
version = "0.1.0"
description = "App de escritorio para administrar fotografías profesionales"
authors = ["Lumik"]
edition = "2021"

[lib]
name = "lumik_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base de datos SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilidades
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dirs = "5"

# Logging
log = "0.4"
env_logger = "0.11"

# RAW image processing and DNG conversion
rawler = "0.6"
image = "0.25"
tiff = { version = "0.11", features = ["jpeg"] }
kamadak-exif = "0.5"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Cross-platform disk info (listing, space)
sysinfo = "0.31"

# Base64 encoding (thumbnails)
base64 = "0.22"

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"

# Linux: libc for poll() on /proc/self/mountinfo (native mount/unmount watcher)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
# Windows: WMI subscription to Win32_VolumeChangeEvent (native device watcher)
wmi = "0.14"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
